# rewriter

./: .editorconfig  .gitignore  LICENSE  README.md  cibuildwheel.toml  pyproject.toml
.github/workflows/: pull-request.yml  wheels.yml
rewriter/: __init__.py  __main__.py  fixers.py  options.py  parser.py  walker.py
rewriter/trackers/: changes.py  imports.py  stats.py
rewriter/transformers/: __init__.py  arguments.py  functions.py
tests/: options_test.py  rewrite_test.py  walker_test.py
tests/__snapshots__/: rewrite_test.ambr
typings/black/: __init__.pyi  mode.pyi
typings/pytest/: __init__.pyi
