[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rewriter"
version = "0.1.0"
authors = [
    {name = "Markis Taylor", email = "m@rkis.net"},
]
description = "Rewrite python code"
readme = "README.md"
requires-python = ">=3.10"
classifiers = []
dependencies = [
  "black>=23"
]

[project.scripts]
rewriter = "rewriter:main"

[tool.coverage.run]
branch = true
source = [
  "rewriter",
]
omit = [
  "rewriter/__main__.py"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = [
  "tests",
]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.mypy]
packages = ["rewriter"]
strict = true
mypy_path = "typings"

[tool.ruff]
target-version = "py310"
line-length = 100
select = [ "E", "F", "W", "Q", "UP", "I", "N" ]

[tool.hatch]

[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = [
  "hatch-mypyc>=0.13.0",
  "mypy==1.1.1",
  "black>=23",
  # Required stubs to be removed when the packages support PEP 561 themselves
  "types-typed-ast>=1.4.2",
]
# mypy-args = ["--config=pyproject.toml"] #["--ignore-missing-imports"]

[tool.cibuildwheel]
build-frontend = "build"
build-verbosity = 1
# So these are the environments we target:
# - Python: CPython 3.7+ only
# - Architecture (64-bit only): amd64 / x86_64, universal2, and arm64
# - OS: Linux (no musl), Windows, and macOS
build = "cp3*-*"
skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32", "pp-*"]
# This is the bare minimum needed to run the test suite. Pulling in the full
# test_requirements.txt would download a bunch of other packages not necessary
# here and would slow down the testing step a fair bit.
test-command = 'rewriter --help'
# Skip trying to test arm64 builds on Intel Macs. (so cross-compilation doesn't
# straight up crash)
test-skip = ["*-macosx_arm64", "*-macosx_universal2:arm64"]

[tool.cibuildwheel.environment]
HATCH_BUILD_HOOKS_ENABLE = "1"
MYPYC_OPT_LEVEL = "3"
MYPYC_DEBUG_LEVEL = "0"
# CPython 3.11 wheels aren't available for aiohttp and building a Cython extension
# from source also doesn't work.
AIOHTTP_NO_EXTENSIONS = "1"

[tool.cibuildwheel.linux]
before-build = [
    "yum install -y clang gcc",
]

[tool.cibuildwheel.linux.environment]
HATCH_BUILD_HOOKS_ENABLE = "1"
MYPYC_OPT_LEVEL = "3"
MYPYC_DEBUG_LEVEL = "0"
# Black needs Clang to compile successfully on Linux.
CC = "clang"
AIOHTTP_NO_EXTENSIONS = "1"
