[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rewriter"
version = "0.1.0"
authors = [
    {name = "Markis Taylor", email = "m@rkis.net"},
]
description = "Rewrite python code"
readme = "README.md"
requires-python = ">=3.10"
classifiers = []
dependencies = [
  "black>=23"
]

[project.scripts]
rewriter = "rewriter:main"

[tool.coverage.run]
branch = true
source = [
  "rewriter",
]
omit = [
  "rewriter/__main__.py"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = [
  "tests",
]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.mypy]
packages = ["rewriter"]
strict = true
mypy_path = "typings"

[tool.ruff]
target-version = "py310"
line-length = 100
select = [ "E", "F", "W", "Q", "UP", "I", "N" ]

[tool.hatch]

[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = [
  "hatch-mypyc>=0.13.0",
  "mypy==1.1.1",
  "black>=23",
]

[tool.cibuildwheel]
build-frontend = "build"
build-verbosity = 1
# Target environments:
# - Python: CPython 3.7+ only
# - Architecture (64-bit only): amd64 / x86_64, universal2, and arm64
# - OS: Linux (no musl), Windows, and macOS
build = "cp3*-*"
skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32", "pp-*"]
test-requires = ["pytest>=6.1.1"]
test-command = 'rewriter --help && pytest {project} -k "not incompatible_with_mypyc"'
# Skip trying to test arm64 builds on Intel Macs. (so cross-compilation doesn't
# straight up crash)
# test-skip = ["*-macosx_arm64", "*-macosx_universal2:arm64"]

[tool.cibuildwheel.environment]
HATCH_BUILD_HOOKS_ENABLE = "1"
MYPYC_OPT_LEVEL = "3"
MYPYC_DEBUG_LEVEL = "0"

[tool.cibuildwheel.linux]
before-build = [
    "yum install -y clang gcc",
]

[tool.cibuildwheel.linux.environment]
HATCH_BUILD_HOOKS_ENABLE = "1"
MYPYC_OPT_LEVEL = "3"
MYPYC_DEBUG_LEVEL = "0"
