[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rewriter"
version = "0.1.0"
authors = [
    {name = "Markis Taylor", email = "m@rkis.net"},
]
description = "Rewrite python code"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "black>=23"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "syrupy",
  "coverage",
  "black",
  "mypy",
  "ruff",
]

[project.scripts]
rewriter = "rewriter:main"


[tool.coverage.run]
branch = true
source = [
  "rewriter",
]
omit = [
  "rewriter/__main__.py"
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = [
  "tests",
]


[tool.black]
target-version = ["py310"]
line-length = 100


[tool.mypy]
files = ["rewriter/**/*.py"]
strict = true
mypy_path = "typings"


[tool.ruff]
target-version = "py310"
line-length = 100
select = [ "E", "F", "W", "Q", "UP", "I", "N" ]


[tool.hatch]

[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = [
  "hatch-mypyc>=0.13.0",
  "mypy==1.1.1",
  "black>=23",
]

# mypycify options:
# https://github.com/python/mypy/blob/v1.1.1/mypyc/build.py#L446
opt_level = "3"
debug_level = "0"


[tool.cibuildwheel]
build-frontend = "build"
build-verbosity = 1

# Target environments:
# - Python: CPython 3.7+ only
# - Architecture (64-bit only): amd64 / x86_64, universal2, and arm64
# - OS: Linux (no musl), Windows, and macOS
build = "cp3*-*"
skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32", "pp-*"]

# Tests:
# Ensure cli can execute with compiled code
# Run test-suite with compiled code
# Skip tests on arm64 and suppress the warning that cibuildwheel can't run tests
test-requires = ["pytest>=6.1.1","syrupy>=4.0.1"]
test-command = "rewriter --help && pytest {project}"
test-skip = ["*-macosx_arm64", "*-macosx_universal2:arm64"]
